tests/basic/check/if/090.pan.out
tests/basic/check/if/090.pan:3:1-4: error: unable to verify type of f90
tests/basic/check/if/090.pan:6:1-4: error: unable to verify type of f91